# Backend

./: .gitignore  Cargo.toml  README.md  index.html  postgre_sql.md
go/basic/: go.mod  main.go
network/: Cargo.toml  build.rs  index.html  network.md
network/proto/: calculator.proto
network/src/: lib.rs  main.rs  multicast.rs  tcp_example.rs  udp_example.rs
network/src/bloking/: basic.rs  bloking.md
network/src/ethernet/: mod.rs  pnet.rs  pnet2.rs
network/src/graph_ql/: basic.rs
network/src/grpc/: basic.rs  grpc.md
network/src/numa/: mod.rs
network/src/quic/: basic.rs
network/src/simd/: basic.rs  simd.md
network/src/tcp/: chat.rs  custom_protocol.rs  epoll.rs  hft.rs  mod.rs  multi_tcp.rs  nic_chat.rs  non_blocking.rs  stream_reassembly.rs  tcp_basic.rs  tcp_echo.rs
network/src/udp/: dns.rs  flow.rs  integration.rs  mod.rs  pnet.rs  udp_basic.rs  udp_echo.rs
network/src/websocket/: basic.rs
nodejs/: server.js
sql/: grammar.md
sqlx_axum/: Cargo.toml  index.html
sqlx_axum/src/: lib.rs
sqlx_axum/src/model/: auth.rs
src/: lib.rs  main.rs  multicast.rs  multicast_sender.rs  rabbit_mq.rs  tcp_example.rs  udp_example.rs  websocket.rs
src/implementation/: tcp.rs
