[package]
name = "axum_socket"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.18"
futures-util = "0.3"
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "postgres"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.128"
dotenv = "0.15.0"