[package]
name = "axum_socket"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.18"
futures-util = "0.3"
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "postgres"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.128"
dotenv = "0.15.0"
lapin = "2.5.0"
futures-lite = "2.5.0"
async-amqp = "2.0.0"
tokio-amqp = "2.0.0"
tracing = "0.1.41"
futures-executor = "0.3.31"
log = "0.4.22"
env_logger = "0.11.5"
tracing-subscriber = "0.3.19"