[package]
name = "network"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
futures-util = "0.3.31"
serde_json = "1.0.142"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = "0.27.0"
