[package]
name = "network"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
futures-util = "0.3.31"
quinn = "0.11.8"
rcgen = "0.14.3"
rustls = { version = "0.23", features = ["ring"] }

serde_json = "1.0.143"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = "0.27.0"
tonic = "0.14.1"
prost-types = "0.14.1"
prost = "0.14.1"         
tonic-prost = "0.14.1"
async-graphql = "7.0.17"
async-graphql-axum = "7.0.17"
axum = "0.8.4"
reqwest = { version = "0.12.23", features = ["json"] } 
[build-dependencies]
tonic-prost-build = "0.14.1"
