[package]
name = "axum_sqlx"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version= "0.8.4", features = ["multipart"] }
tokio = { version = "1.46.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
dotenv = "0.15.0"
tower-http = { version = "0.6.6", features = ["cors", "util"] }
